--- a/frontend/src/pages/Components/ChatBox/ChatBox.css
+++ b/frontend/src/pages/Components/ChatBox/ChatBox.css
@@ -5,6 +5,7 @@
   background: var(--cardColor);
   border-radius: 1rem;
   height: 100%;
+  overflow: hidden;
 }
 
 .chat-header {
@@ -19,6 +20,7 @@
   flex-direction: column;
   gap: 0.7rem;
   padding: 1rem;
+  padding-bottom: 3.5rem;  
   overflow-y: auto;
 }
 
